# slog-try

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: main.yml
src/: lib.rs
