[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
description = "Convenience macros for logging with an optional slog Logger."
documentation = "https://docs.rs/slog-try"
homepage = "https://github.com/rustyhorde/slog-try"
keywords = [
    "slog",
    "macros",
    "Logger",
]
license = "MIT/Apache-2.0"
name = "slog-try"
readme = "README.md"
repository = "https://github.com/rustyhorde/slog-try"
version = "0.2.0"

[dependencies]
slog = "^2"

[dev-dependencies]
slog = { version = "^2", features = ["max_level_trace"] }
slog-term = "^2"
