[package]
authors = ["Jason Ozias <jason.g.ozias@gmail.com>"]
categories = ["command-line-interface", "development-tools", "development-tools::debugging"]
description = "Convenience macros for logging with an optional slog Logger."
documentation = "https://docs.rs/slog-try"
edition = "2018"
homepage = "https://github.com/rustyhorde/slog-try"
keywords = [
    "slog",
    "macros",
]
license = "MIT OR Apache-2.0"
name = "slog-try"
readme = "README.md"
repository = "https://github.com/rustyhorde/slog-try"
version = "1.0.1"

[dependencies]
slog = "2"

[dev-dependencies]
slog = { version = "2", features = ["max_level_trace"] }

[build-dependencies]
rustversion = "1"
